// FastestJSONInTheWest Test Service Definitions
// Author: Olumuyiwa Oluwasanmi
// gRPC service for automated testing and validation

syntax = "proto3";

package fastjson.testing;

option cxx_namespace = "fastjson::testing";
option cc_enable_arenas = true;

// ============================================================================
// Testing Types and Enums
// ============================================================================

enum TestType {
    TEST_UNIT = 0;
    TEST_INTEGRATION = 1;
    TEST_PERFORMANCE = 2;
    TEST_FUZZ = 3;
    TEST_MEMORY = 4;
    TEST_THREAD_SAFETY = 5;
    TEST_REGRESSION = 6;
}

enum TestStatus {
    TEST_STATUS_PENDING = 0;
    TEST_STATUS_RUNNING = 1;
    TEST_STATUS_PASSED = 2;
    TEST_STATUS_FAILED = 3;
    TEST_STATUS_SKIPPED = 4;
    TEST_STATUS_TIMEOUT = 5;
}

enum SanitizerType {
    SANITIZER_NONE = 0;
    SANITIZER_ADDRESS = 1;
    SANITIZER_MEMORY = 2;
    SANITIZER_THREAD = 3;
    SANITIZER_UNDEFINED = 4;
}

message TestCase {
    string test_id = 1;
    string name = 2;
    TestType type = 3;
    string description = 4;
    repeated string tags = 5;
    string source_file = 6;
    int32 line_number = 7;
    int64 timeout_ms = 8;
    map<string, string> parameters = 9;
}

message TestResult {
    string test_id = 1;
    TestStatus status = 2;
    int64 duration_ms = 3;
    string output = 4;
    string error_message = 5;
    float memory_usage_mb = 6;
    float cpu_usage_percent = 7;
    repeated string assertions = 8;
    map<string, string> metrics = 9;
}

message TestSuite {
    string suite_id = 1;
    string name = 2;
    repeated TestCase test_cases = 3;
    string setup_code = 4;
    string teardown_code = 5;
    map<string, string> environment = 6;
}

message BenchmarkMetrics {
    string name = 1;
    double mean_time_ns = 2;
    double median_time_ns = 3;
    double std_deviation_ns = 4;
    int64 iterations = 5;
    double throughput_ops_per_second = 6;
    double memory_usage_bytes = 7;
    double cache_hit_ratio = 8;
    map<string, double> custom_metrics = 9;
}

message CodeCoverageReport {
    string source_file = 1;
    int32 total_lines = 2;
    int32 covered_lines = 3;
    float line_coverage_percent = 4;
    int32 total_functions = 5;
    int32 covered_functions = 6;
    float function_coverage_percent = 7;
    repeated CoverageRegion uncovered_regions = 8;
}

message CoverageRegion {
    int32 start_line = 1;
    int32 end_line = 2;
    int32 execution_count = 3;
}

// ============================================================================
// Test Service Definition
// ============================================================================

service TestService {
    // Test discovery and execution
    rpc DiscoverTests(DiscoverTestsRequest) returns (DiscoverTestsResponse);
    rpc RunTests(RunTestsRequest) returns (RunTestsResponse);
    rpc RunTestSuite(RunTestSuiteRequest) returns (RunTestSuiteResponse);
    
    // Benchmarking and performance testing
    rpc RunBenchmarks(RunBenchmarksRequest) returns (RunBenchmarksResponse);
    rpc CompareBenchmarks(CompareBenchmarksRequest) returns (CompareBenchmarksResponse);
    
    // Code coverage and analysis
    rpc GenerateCoverage(GenerateCoverageRequest) returns (GenerateCoverageResponse);
    rpc AnalyzeCoverage(AnalyzeCoverageRequest) returns (AnalyzeCoverageResponse);
    
    // Memory and security testing
    rpc RunMemoryTests(RunMemoryTestsRequest) returns (RunMemoryTestsResponse);
    rpc RunFuzzTests(RunFuzzTestsRequest) returns (RunFuzzTestsResponse);
    
    // Test automation and CI/CD
    rpc ValidateCodeQuality(ValidateCodeQualityRequest) returns (ValidateCodeQualityResponse);
    rpc GenerateTestReport(GenerateTestReportRequest) returns (GenerateTestReportResponse);
    
    // Real-time test monitoring
    rpc StreamTestResults(StreamTestResultsRequest) returns (stream TestResultMessage);
    rpc GetTestMetrics(GetTestMetricsRequest) returns (TestMetricsResponse);
}

// ============================================================================
// Request/Response Message Types
// ============================================================================

message DiscoverTestsRequest {
    string project_path = 1;
    repeated TestType test_types = 2;
    repeated string include_patterns = 3;
    repeated string exclude_patterns = 4;
    bool recursive_search = 5;
}

message DiscoverTestsResponse {
    repeated TestSuite test_suites = 1;
    int32 total_test_cases = 2;
    repeated string discovered_files = 3;
}

message RunTestsRequest {
    repeated string test_ids = 1; // Empty means run all
    repeated TestType test_types = 2;
    bool parallel_execution = 3;
    int32 max_parallel_tests = 4;
    int64 timeout_ms = 5;
    SanitizerType sanitizer = 6;
    bool collect_coverage = 7;
    map<string, string> environment_variables = 8;
}

message RunTestsResponse {
    repeated TestResult test_results = 1;
    TestSummary summary = 2;
    CodeCoverageReport coverage_report = 3;
    string execution_log = 4;
}

message TestSummary {
    int32 total_tests = 1;
    int32 passed_tests = 2;
    int32 failed_tests = 3;
    int32 skipped_tests = 4;
    float success_rate = 5;
    int64 total_duration_ms = 6;
}

message RunTestSuiteRequest {
    string suite_id = 1;
    RunTestsRequest test_options = 2;
}

message RunTestSuiteResponse {
    TestSuite test_suite = 1;
    repeated TestResult test_results = 2;
    TestSummary summary = 3;
}

message RunBenchmarksRequest {
    repeated string benchmark_names = 1;
    int32 min_iterations = 2;
    int64 min_time_ms = 3;
    bool enable_profiling = 4;
    map<string, string> benchmark_parameters = 5;
}

message RunBenchmarksResponse {
    repeated BenchmarkMetrics benchmark_results = 1;
    string profiling_data = 2;
    string benchmark_report = 3;
}

message CompareBenchmarksRequest {
    string baseline_results_file = 1;
    string current_results_file = 2;
    float significance_threshold = 3; // percentage change to be considered significant
}

message CompareBenchmarksResponse {
    repeated BenchmarkComparison comparisons = 1;
    string comparison_report = 2;
    bool performance_regression_detected = 3;
}

message BenchmarkComparison {
    string benchmark_name = 1;
    double baseline_time_ns = 2;
    double current_time_ns = 3;
    double percentage_change = 4;
    bool is_significant = 5;
    bool is_regression = 6;
}

message GenerateCoverageRequest {
    string project_path = 1;
    repeated string source_directories = 2;
    string test_executable = 3;
    repeated string test_arguments = 4;
    bool exclude_system_headers = 5;
}

message GenerateCoverageResponse {
    repeated CodeCoverageReport coverage_reports = 1;
    float overall_line_coverage = 2;
    float overall_function_coverage = 3;
    string coverage_report_html = 4;
    string coverage_report_xml = 5;
}

message AnalyzeCoverageRequest {
    repeated CodeCoverageReport coverage_reports = 1;
    float minimum_coverage_threshold = 2;
    bool fail_on_coverage_decrease = 3;
}

message AnalyzeCoverageResponse {
    bool meets_coverage_threshold = 1;
    repeated string low_coverage_files = 2;
    repeated string coverage_recommendations = 3;
    float coverage_trend = 4; // positive for improvement, negative for decline
}

message RunMemoryTestsRequest {
    string executable_path = 1;
    repeated string test_arguments = 2;
    SanitizerType sanitizer = 3;
    bool use_valgrind = 4;
    int64 timeout_ms = 5;
}

message RunMemoryTestsResponse {
    bool passed = 1;
    repeated string memory_leaks = 2;
    repeated string invalid_accesses = 3;
    string valgrind_output = 4;
    string sanitizer_output = 5;
    float peak_memory_usage_mb = 6;
}

message RunFuzzTestsRequest {
    string fuzz_target = 1;
    int32 max_runs = 2;
    int64 max_total_time_ms = 3;
    string corpus_directory = 4;
    string dictionary_file = 5;
    repeated string additional_flags = 6;
}

message RunFuzzTestsResponse {
    bool found_crashes = 1;
    int32 total_runs = 2;
    repeated string crash_inputs = 3;
    string fuzzing_log = 4;
    string coverage_summary = 5;
}

message ValidateCodeQualityRequest {
    string project_path = 1;
    bool run_static_analysis = 2;
    bool check_code_formatting = 3;
    bool run_linting = 4;
    bool check_documentation = 5;
    repeated string exclude_paths = 6;
}

message ValidateCodeQualityResponse {
    bool passes_quality_checks = 1;
    repeated string static_analysis_issues = 2;
    repeated string formatting_issues = 3;
    repeated string linting_issues = 4;
    repeated string documentation_issues = 5;
    string quality_score = 6; // A-F grading
}

message GenerateTestReportRequest {
    repeated TestResult test_results = 1;
    repeated BenchmarkMetrics benchmark_results = 2;
    repeated CodeCoverageReport coverage_reports = 3;
    string report_format = 4; // "html", "xml", "json", "junit"
    string output_directory = 5;
}

message GenerateTestReportResponse {
    string report_path = 1;
    string report_content = 2;
    repeated string generated_files = 3;
}

message StreamTestResultsRequest {
    RunTestsRequest test_request = 1;
}

message TestResultMessage {
    int64 timestamp = 1;
    string test_id = 2;
    TestStatus status = 3;
    string message = 4;
    float progress_percentage = 5;
    TestResult result = 6; // Set when test completes
}

message GetTestMetricsRequest {
    string project_path = 1;
    int32 days_history = 2; // How many days of historical data to include
}

message TestMetricsResponse {
    TestSummary current_metrics = 1;
    repeated DailyTestMetrics historical_metrics = 2;
    map<string, float> quality_trends = 3;
}

message DailyTestMetrics {
    string date = 1; // YYYY-MM-DD format
    TestSummary test_summary = 2;
    float average_coverage = 3;
    int32 new_test_cases = 4;
}