#!/usr/bin/env python3
"""
FastestJSONInTheWest Agent Orchestrator with gRPC and UV Integration
Author: Olumuyiwa Oluwasanmi
Enhanced multi-threaded orchestrator with autonomous dependency management
"""

import asyncio
import concurrent.futures
import json
import logging
import os
import sys
import threading
import time
import uuid
from dataclasses import dataclass, field
from enum import Enum
from pathlib import Path
from typing import Dict, List, Optional, Set, Any
from queue import PriorityQueue
import subprocess

# UV and Python environment setup
def setup_uv_environment():
    """Setup UV virtual environment for agent dependencies"""
    project_root = Path(__file__).parent.parent
    venv_path = project_root / ".venv"
    
    if not venv_path.exists():
        print("Setting up UV virtual environment...")
        subprocess.run([
            "uv", "venv", "--python", "3.13", str(venv_path)
        ], check=True, cwd=project_root)
        
        # Install dependencies
        subprocess.run([
            "uv", "pip", "install", 
            "grpcio", "grpcio-tools", "protobuf", "pybind11", "numpy", "pytest"
        ], check=True, cwd=project_root)
    
    # Activate environment for current process
    activate_script = venv_path / "bin" / "activate_this.py"
    if activate_script.exists():
        exec(open(activate_script).read(), {"__file__": str(activate_script)})

# Initialize UV environment first
try:
    setup_uv_environment()
    # Now try to import gRPC modules
    import grpc
    from concurrent import futures
    GRPC_AVAILABLE = True
except (ImportError, subprocess.CalledProcessError) as e:
    print(f"gRPC setup issue: {e}")
    GRPC_AVAILABLE = False

# ============================================================================
# Enhanced Types and Configuration  
# ============================================================================

class TaskPriority(Enum):
    CRITICAL = 1
    HIGH = 2 
    NORMAL = 3
    LOW = 4
    BACKGROUND = 5

class AgentType(Enum):
    ORCHESTRATOR = "orchestrator"
    IMPLEMENTATION = "implementation"
    ENVIRONMENT = "environment"
    CONFIGURATION = "configuration"
    TESTING = "testing"

class TaskStatus(Enum):
    PENDING = "pending"
    RUNNING = "running"
    COMPLETED = "completed"
    FAILED = "failed"
    CANCELLED = "cancelled"

@dataclass
class AgentTask:
    task_id: str
    task_type: str
    description: str
    agent_type: AgentType
    priority: TaskPriority
    parameters: Dict[str, Any] = field(default_factory=dict)
    deadline: Optional[float] = None
    dependencies: Set[str] = field(default_factory=set)
    status: TaskStatus = TaskStatus.PENDING
    result: Optional[Any] = None
    error_message: Optional[str] = None
    created_at: float = field(default_factory=time.time)
    started_at: Optional[float] = None
    completed_at: Optional[float] = None
    assigned_agent: Optional[str] = None
    
    def __lt__(self, other):
        return self.priority.value < other.priority.value

@dataclass
class AgentInfo:
    agent_id: str
    agent_type: AgentType
    version: str = "2.0.0"
    is_active: bool = True
    load_factor: int = 0  # 0-100
    capabilities: Set[str] = field(default_factory=set)
    max_concurrent_tasks: int = 5
    heartbeat_interval: float = 30.0
    last_heartbeat: float = field(default_factory=time.time)
    grpc_address: Optional[str] = None
    
@dataclass 
class OrchestratorConfig:
    max_agents: int = 10
    task_timeout: float = 3600.0  # 1 hour
    heartbeat_timeout: float = 90.0  # 1.5 minutes
    max_retries: int = 3
    log_level: str = "INFO"
    grpc_port: int = 50051
    enable_autonomous_mode: bool = True
    uv_venv_path: str = ".venv"
    source_compilation_enabled: bool = True
    
# ============================================================================
# Enhanced Agent Orchestrator with gRPC
# ============================================================================

class AgentOrchestrator:
    """
    Enhanced multi-threaded agent orchestrator with gRPC communication,
    UV Python environment management, and autonomous dependency handling.
    """
    
    def __init__(self, config: OrchestratorConfig):
        self.config = config
        self.agents: Dict[str, AgentInfo] = {}
        self.tasks: Dict[str, AgentTask] = {}
        self.task_queue: PriorityQueue = PriorityQueue()
        self.completed_tasks: Dict[str, AgentTask] = {}
        self.failed_tasks: Dict[str, AgentTask] = {}
        
        # Thread management
        self.executor = concurrent.futures.ThreadPoolExecutor(max_workers=config.max_agents)
        self.running = True
        self.orchestrator_thread: Optional[threading.Thread] = None
        
        # Synchronization
        self.task_lock = threading.RLock()
        self.agent_lock = threading.RLock()
        
        # gRPC server
        self.grpc_server: Optional[Any] = None
        
        # Project paths and environment
        self.project_root = Path(__file__).parent.parent
        self.uv_venv_path = self.project_root / config.uv_venv_path
        
        # Setup logging
        self.setup_logging()
        
        # Initialize gRPC server
        self.setup_grpc_server()
        
        # Register built-in agents
        self.register_builtin_agents()
        
    def setup_logging(self):
        """Configure enhanced logging with agent context"""
        log_dir = self.project_root / 'logs'
        log_dir.mkdir(exist_ok=True)
        
        logging.basicConfig(
            level=getattr(logging, self.config.log_level),
            format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',
            handlers=[
                logging.FileHandler(log_dir / 'orchestrator.log'),
                logging.StreamHandler(sys.stdout)
            ]
        )
        self.logger = logging.getLogger(f"orchestrator-{uuid.uuid4().hex[:8]}")
        
    def setup_grpc_server(self):
        """Initialize gRPC server for agent communication"""
        if GRPC_AVAILABLE:
            try:
                # This would use generated gRPC modules after protobuf compilation
                self.grpc_server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
                
                listen_addr = f'[::]:{self.config.grpc_port}'
                self.grpc_server.add_insecure_port(listen_addr)
                
                self.logger.info(f"gRPC server configured on {listen_addr}")
                
            except Exception as e:
                self.logger.warning(f"gRPC server setup failed: {e}")
        else:
            self.logger.info("gRPC not available, using local-only mode")
            
    def register_builtin_agents(self):
        """Register built-in agent types with enhanced capabilities"""
        builtin_agents = [
            AgentInfo(
                agent_id=f"impl-{uuid.uuid4().hex[:8]}",
                agent_type=AgentType.IMPLEMENTATION,
                capabilities={"cpp_generation", "module_creation", "simd_optimization", "pybind11"}
            ),
            AgentInfo(
                agent_id=f"env-{uuid.uuid4().hex[:8]}", 
                agent_type=AgentType.ENVIRONMENT,
                capabilities={"dependency_management", "source_compilation", "uv_integration", "cmake_configuration"}
            ),
            AgentInfo(
                agent_id=f"config-{uuid.uuid4().hex[:8]}",
                agent_type=AgentType.CONFIGURATION,
                capabilities={"cmake_generation", "build_coordination", "grpc_setup"}
            ),
            AgentInfo(
                agent_id=f"test-{uuid.uuid4().hex[:8]}",
                agent_type=AgentType.TESTING,
                capabilities={"unit_testing", "benchmarking", "valgrind_analysis", "coverage_reporting"}
            )
        ]
        
        for agent in builtin_agents:
            with self.agent_lock:
                self.agents[agent.agent_id] = agent
            self.logger.info(f"Registered {agent.agent_type.value} agent: {agent.agent_id}")
            
    def start(self):
        """Start the orchestrator with gRPC server"""
        self.logger.info("Starting enhanced agent orchestrator...")
        
        # Start gRPC server if available
        if self.grpc_server and GRPC_AVAILABLE:
            self.grpc_server.start()
            self.logger.info(f"gRPC server started on port {self.config.grpc_port}")
        
        # Start main orchestration loop
        self.orchestrator_thread = threading.Thread(target=self._orchestration_loop, daemon=True)
        self.orchestrator_thread.start()
        
        # Start agent monitoring
        threading.Thread(target=self._agent_monitor, daemon=True).start()
        
        self.logger.info("Agent orchestrator started successfully")
        
        # Run autonomous initialization if enabled
        if self.config.enable_autonomous_mode:
            self.initialize_autonomous_development()
            
    def stop(self):
        """Stop the orchestrator gracefully"""
        self.logger.info("Stopping agent orchestrator...")
        
        self.running = False
        
        # Stop gRPC server
        if self.grpc_server and GRPC_AVAILABLE:
            self.grpc_server.stop(grace=5)
            
        # Shutdown thread pool
        self.executor.shutdown(wait=True)
        
        # Wait for orchestrator thread
        if self.orchestrator_thread and self.orchestrator_thread.is_alive():
            self.orchestrator_thread.join(timeout=10)
            
        self.logger.info("Agent orchestrator stopped")
        
    def _orchestration_loop(self):
        """Main orchestration loop with enhanced task management"""
        while self.running:
            try:
                # Process pending tasks
                self._process_task_queue()
                
                # Check for completed tasks
                self._check_completed_tasks()
                
                # Handle task dependencies
                self._resolve_task_dependencies()
                
                # Monitor agent health
                self._monitor_agent_health()
                
                time.sleep(1)  # Orchestration cycle interval
                
            except Exception as e:
                self.logger.error(f"Error in orchestration loop: {e}")
                time.sleep(5)  # Back-off on error
                
    def _process_task_queue(self):
        """Process tasks from the priority queue"""
        while not self.task_queue.empty() and self.running:
            try:
                task = self.task_queue.get_nowait()
                
                # Check if dependencies are satisfied
                if not self._dependencies_satisfied(task):
                    # Re-queue with lower priority
                    self.task_queue.put(task)
                    continue
                
                # Find available agent
                agent = self._find_available_agent(task.agent_type)
                if agent:
                    self._assign_task_to_agent(task, agent)
                else:
                    # Re-queue if no agent available
                    self.task_queue.put(task)
                    break
                    
            except Exception as e:
                self.logger.error(f"Error processing task queue: {e}")
                
    def _dependencies_satisfied(self, task: AgentTask) -> bool:
        """Check if all task dependencies are completed"""
        for dep_id in task.dependencies:
            if dep_id not in self.completed_tasks:
                return False
        return True
        
    def _find_available_agent(self, agent_type: AgentType) -> Optional[AgentInfo]:
        """Find an available agent of the specified type"""
        with self.agent_lock:
            for agent in self.agents.values():
                if (agent.agent_type == agent_type and 
                    agent.is_active and 
                    agent.load_factor < 80):  # 80% max load
                    return agent
        return None
        
    def _assign_task_to_agent(self, task: AgentTask, agent: AgentInfo):
        """Assign a task to an available agent"""
        with self.task_lock:
            task.status = TaskStatus.RUNNING
            task.started_at = time.time()
            task.assigned_agent = agent.agent_id
            
            agent.load_factor += 20  # Approximate load increase
            
        # Execute task asynchronously
        future = self.executor.submit(self._execute_task, task, agent)
        
        self.logger.info(f"Assigned task {task.task_id} to agent {agent.agent_id}")
        
    def _execute_task(self, task: AgentTask, agent: AgentInfo):
        """Execute a task with an agent"""
        try:
            self.logger.info(f"Executing task {task.task_id}: {task.description}")
            
            # Route task based on type and agent capabilities
            if agent.agent_type == AgentType.IMPLEMENTATION:
                result = self._execute_implementation_task(task)
            elif agent.agent_type == AgentType.ENVIRONMENT:
                result = self._execute_environment_task(task)
            elif agent.agent_type == AgentType.CONFIGURATION:
                result = self._execute_configuration_task(task)
            elif agent.agent_type == AgentType.TESTING:
                result = self._execute_testing_task(task)
            else:
                raise ValueError(f"Unknown agent type: {agent.agent_type}")
                
            # Mark task as completed
            with self.task_lock:
                task.status = TaskStatus.COMPLETED
                task.result = result
                task.completed_at = time.time()
                self.completed_tasks[task.task_id] = task
                
                agent.load_factor = max(0, agent.load_factor - 20)
                
            self.logger.info(f"Task {task.task_id} completed successfully")
            
        except Exception as e:
            # Mark task as failed
            with self.task_lock:
                task.status = TaskStatus.FAILED
                task.error_message = str(e)
                task.completed_at = time.time()
                self.failed_tasks[task.task_id] = task
                
                agent.load_factor = max(0, agent.load_factor - 20)
                
            self.logger.error(f"Task {task.task_id} failed: {e}")
            
    def initialize_autonomous_development(self):
        """Initialize autonomous development workflow"""
        self.logger.info("Starting autonomous development initialization...")
        
        # Task sequence for MVP implementation
        init_tasks = [
            AgentTask(
                task_id=str(uuid.uuid4()),
                task_type="setup_dependencies",
                description="Setup and validate all project dependencies via UV and source compilation",
                agent_type=AgentType.ENVIRONMENT,
                priority=TaskPriority.CRITICAL
            ),
            AgentTask(
                task_id=str(uuid.uuid4()),
                task_type="generate_cmake",
                description="Generate enhanced CMake configuration with gRPC support",
                agent_type=AgentType.CONFIGURATION,
                priority=TaskPriority.HIGH
            ),
            AgentTask(
                task_id=str(uuid.uuid4()),
                task_type="generate_cpp_module",
                description="Generate core JSON parsing C++23 module with SIMD optimization",
                agent_type=AgentType.IMPLEMENTATION,
                priority=TaskPriority.HIGH,
                parameters={"module_name": "fastjson.parser", "enable_simd": True, "author": "Olumuyiwa Oluwasanmi"}
            )
        ]
        
        # Set up task dependencies
        init_tasks[1].dependencies.add(init_tasks[0].task_id)  # CMake depends on dependencies
        init_tasks[2].dependencies.add(init_tasks[1].task_id)  # Implementation depends on CMake
        
        # Queue all tasks
        for task in init_tasks:
            self.submit_task(task)
            
        self.logger.info(f"Queued {len(init_tasks)} autonomous initialization tasks")
        
    # Task execution methods - enhanced for UV and source compilation support
    def _execute_implementation_task(self, task: AgentTask) -> Any:
        """Execute implementation-specific tasks"""
        if task.task_type == "generate_cpp_module":
            return self._generate_cpp_module(task.parameters)
        elif task.task_type == "create_python_bindings":
            return self._create_python_bindings(task.parameters) 
        elif task.task_type == "optimize_simd":
            return self._optimize_simd_code(task.parameters)
        else:
            raise ValueError(f"Unknown implementation task: {task.task_type}")
            
    def _execute_environment_task(self, task: AgentTask) -> Any:
        """Execute environment management tasks"""
        if task.task_type == "setup_dependencies":
            return self._setup_dependencies(task.parameters)
        elif task.task_type == "compile_source_libraries":
            return self._compile_source_libraries(task.parameters)
        elif task.task_type == "configure_uv_environment":
            return self._configure_uv_environment(task.parameters)
        else:
            raise ValueError(f"Unknown environment task: {task.task_type}")
            
    def _execute_configuration_task(self, task: AgentTask) -> Any:
        """Execute configuration and build tasks"""
        if task.task_type == "generate_cmake":
            return self._generate_cmake_configuration(task.parameters)
        elif task.task_type == "setup_grpc":
            return self._setup_grpc_integration(task.parameters)
        else:
            raise ValueError(f"Unknown configuration task: {task.task_type}")
            
    def _execute_testing_task(self, task: AgentTask) -> Any:
        """Execute testing and validation tasks"""
        if task.task_type == "run_unit_tests":
            return self._run_unit_tests(task.parameters)
        elif task.task_type == "run_benchmarks":
            return self._run_benchmarks(task.parameters)
        elif task.task_type == "generate_coverage":
            return self._generate_coverage_report(task.parameters)
        else:
            raise ValueError(f"Unknown testing task: {task.task_type}")
    
    # Placeholder implementations for task execution methods
    def _generate_cpp_module(self, params: Dict[str, Any]) -> str:
        """Generate C++23 module code"""
        self.logger.info("Generating C++23 JSON parsing module...")
        return "cpp_module_generated"
        
    def _create_python_bindings(self, params: Dict[str, Any]) -> str:
        """Create pybind11 Python bindings"""
        return "python_bindings_created"
        
    def _optimize_simd_code(self, params: Dict[str, Any]) -> str:
        """Optimize code with SIMD instructions"""
        return "simd_optimization_applied"
        
    def _setup_dependencies(self, params: Dict[str, Any]) -> str:
        """Setup project dependencies via UV and source compilation"""
        self.logger.info("Setting up dependencies via UV and source compilation...")
        return "dependencies_configured"
        
    def _compile_source_libraries(self, params: Dict[str, Any]) -> str:
        """Compile libraries from source to /usr/local/"""
        return "source_libraries_compiled"
        
    def _configure_uv_environment(self, params: Dict[str, Any]) -> str:
        """Configure UV Python environment"""
        return "uv_environment_configured"
        
    def _generate_cmake_configuration(self, params: Dict[str, Any]) -> str:
        """Generate CMake configuration files"""
        self.logger.info("Generating enhanced CMake configuration...")
        return "cmake_configuration_generated"
        
    def _setup_grpc_integration(self, params: Dict[str, Any]) -> str:
        """Setup gRPC integration for agent communication"""
        return "grpc_integration_setup"
        
    def _run_unit_tests(self, params: Dict[str, Any]) -> str:
        """Run unit test suite"""
        return "unit_tests_executed"
        
    def _run_benchmarks(self, params: Dict[str, Any]) -> str:
        """Run performance benchmarks"""
        return "benchmarks_executed"
        
    def _generate_coverage_report(self, params: Dict[str, Any]) -> str:
        """Generate code coverage report"""
        return "coverage_report_generated"
        
    # Utility methods for orchestration
    def _check_completed_tasks(self):
        """Check for completed tasks and handle results"""
        pass
        
    def _resolve_task_dependencies(self):
        """Check and resolve task dependencies"""
        pass
        
    def _monitor_agent_health(self):
        """Monitor agent health and connectivity"""
        pass
        
    def _agent_monitor(self):
        """Background thread for monitoring agents"""
        while self.running:
            try:
                with self.agent_lock:
                    current_time = time.time()
                    for agent in self.agents.values():
                        if (current_time - agent.last_heartbeat) > self.config.heartbeat_timeout:
                            agent.is_active = False
                            self.logger.warning(f"Agent {agent.agent_id} marked inactive (heartbeat timeout)")
                            
                time.sleep(30)  # Check every 30 seconds
                
            except Exception as e:
                self.logger.error(f"Error in agent monitor: {e}")
                
    def submit_task(self, task: AgentTask):
        """Submit a task to the orchestrator"""
        with self.task_lock:
            self.tasks[task.task_id] = task
            self.task_queue.put(task)
            
        self.logger.info(f"Task submitted: {task.task_id} - {task.description}")
        
    def get_task_status(self, task_id: str) -> Optional[AgentTask]:
        """Get the status of a specific task"""
        with self.task_lock:
            return self.tasks.get(task_id)
            
    def get_system_status(self) -> Dict[str, Any]:
        """Get comprehensive system status"""
        with self.task_lock, self.agent_lock:
            return {
                "agents": {
                    "total": len(self.agents),
                    "active": sum(1 for a in self.agents.values() if a.is_active),
                    "by_type": {
                        agent_type.value: sum(1 for a in self.agents.values() 
                                            if a.agent_type == agent_type and a.is_active)
                        for agent_type in AgentType
                    }
                },
                "tasks": {
                    "total": len(self.tasks),
                    "pending": sum(1 for t in self.tasks.values() if t.status == TaskStatus.PENDING),
                    "running": sum(1 for t in self.tasks.values() if t.status == TaskStatus.RUNNING),
                    "completed": len(self.completed_tasks),
                    "failed": len(self.failed_tasks)
                },
                "orchestrator": {
                    "running": self.running,
                    "grpc_enabled": self.grpc_server is not None,
                    "autonomous_mode": self.config.enable_autonomous_mode,
                    "author": "Olumuyiwa Oluwasanmi"
                }
            }
            
# ============================================================================
# Main Entry Point
# ============================================================================

def main():
    """Main entry point for agent orchestrator"""
    import argparse
    
    parser = argparse.ArgumentParser(description="FastestJSONInTheWest Agent Orchestrator")
    parser.add_argument("--config", type=str, help="Configuration file path")
    parser.add_argument("--port", type=int, default=50051, help="gRPC server port")
    parser.add_argument("--autonomous", action="store_true", help="Enable autonomous mode")
    parser.add_argument("--cmake-mode", action="store_true", help="Run in CMake integration mode")
    
    args = parser.parse_args()
    
    # Create configuration
    config = OrchestratorConfig(
        grpc_port=args.port,
        enable_autonomous_mode=args.autonomous or args.cmake_mode
    )
    
    # Create and start orchestrator
    orchestrator = AgentOrchestrator(config)
    
    try:
        orchestrator.start()
        
        if args.cmake_mode:
            # CMake integration mode - run specific tasks and exit
            print("Running in CMake integration mode...")
            # Wait for initialization tasks to complete
            time.sleep(10)
            
            status = orchestrator.get_system_status()
            print(f"Orchestrator status: {json.dumps(status, indent=2)}")
            
        else:
            # Interactive mode
            print("Agent orchestrator started. Press Ctrl+C to stop...")
            while True:
                time.sleep(1)
                
    except KeyboardInterrupt:
        print("\nShutting down...")
    finally:
        orchestrator.stop()

if __name__ == "__main__":
    main()